navbar no longer covers up search bar on mobile. Also put margin-bottom to 0 to remove gray bar below navbar.

--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -33,7 +33,8 @@ html, body, #map-canvas {
       }
 
 body {
-  padding-top: 60px;
+  height: 100%;
+  /*padding-top: 60px;*/
 }
 
 /*.googft-info-window { background-color: yellow }*/
